# spp-cognito-poc

./: .gitignore  Makefile  README.md
fake_baw/: Dockerfile  pyproject.toml
fake_baw/app/: setup.py
poc_client/: Dockerfile  application.py  pyproject.toml
poc_client/app/: setup.py
poc_client/app/auth/: __init__.py  auth.py  decorator.py  routes.py
poc_client/app/root/: __init__.py  root.py
scripts/: start_fake_baw.sh  start_poc_client.sh  tf_apply.sh
terraform/: backend.tf  cognito.tf  elasticache.tf  fargate.tf  provider.tf
