[tool.poetry]
name = "poc_client"
version = "0.1.0"
description = ""
authors = ["Sam Bryant <srbry@hotmail.com>"]

[tool.poetry.dependencies]
spp_cognito_auth = { git = "git@github.com:ONSdigital/spp-cognito-auth.git", branch = "main" }
python = "^3.8"
Flask = "^1.1.2"
Flask-Script = "^2.0.6"
requests = "^2.25.0"
Authlib = "^0.15.2"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
